# msdf

./: .gitignore  .gitmodules  README.md  build_all.sh  build_freetype.sh  build_msdfgen.sh  index.html  package-lock.json  package.json  vite.config.ts
lib/: a.out.js  index.ts  msdfgen.js  msdfgen.wasm  placeOnImageData.ts  placeOnSAB.ts  renderer.ts  types.ts  wasm_app.js  wasm_app.wasm  worker-runner.ts  worker.ts
msdfgen/: CMakeLists.txt  wasm.cpp
public/: a.out.js  a.out.wasm
src/: App.tsx  index.css  utils.ts
src/lib/: index.ts
src/lib/core/: Bitmap.ts  Contour.ts  EdgeHolder.ts  MSDFDistanceFinder.ts  Segment.ts  Shape.ts  SignedDistance.ts  Vector2.ts  edgeColoring.ts  generateMSDF.ts  isCorner.ts  lerp.ts  nonZeroSign.ts  pointer.ts
src/lib1/: Contour.ts  SDFTransform.ts  Segment.ts  Shape.ts  Vector2.ts  edgeColoring.ts  generateMSDF.ts  index.ts
src/lib2/: generate.js  index.ts  javascript.js  path.js  webgl.js  webglUtils.js
src/lib3/: index.ts
src/lib4/: index.ts
src/lib5/: index.ts  worker.ts
src/text/: createText.ts  font.ts  instanced-glyph.ts  instanced-text.ts  layout.ts  text.tsx
